--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="vendor/mariadb-java-client-1.5.5.jar"/>
+	<classpathentry kind="lib" path="vendor/commons-validator-1.5.1.jar"/>
 	<classpathentry kind="output" path="out/production/kanban-board-lite"/>
 </classpath>
